moved language groups around so locale would be first (search view)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -307,8 +307,8 @@ en:
     labels label:                               "Labels:"
     title:                                      "Bookmarks"
     not found:                                  "Bookmarks give you a quick reference guide to your favorite passages or to the last chapter you read in a particular book. To add a bookmark, select a verse in the Bible reader and then click the Selected button at the top of the reader."
-    successfully created:                       "Success! Bookmark added."
-    successfully deleted:                       "Bookmark removed."
+    successfully created:                       "Bookmark Added"
+    successfully deleted:                       "Bookmark Removed"
     labels placeholder:                         "Separate multiple labels with commas."
     save:                                       "Save Bookmark"
     confirm delete:                             "Yes, I'm sure."
@@ -367,7 +367,7 @@ en:
     privacy title:                              "Privacy"
     stop reading:                               "Stop Reading This Plan"
     accountability:                             "Accountability"
-    email reminder to me:                       "Email a Daily reminder to me (%{email_address})"
+    email reminder to me:                       "Email a daily reminder to me (%{email_address})"
     email weekly report to a friend:            "Email a weekly report to one or more YouVersion members"
     calendar:                                   "Calendar"
     search members placeholder:                 "Find a YouVersion Member"
@@ -385,19 +385,19 @@ en:
     add member:                                 "Add"
     email edit:                                 "Edit"
     unsubscribe successful:                     "You unsubscribed from this plan."
-    partner added successful:                   "Success! %{username} added to plan accountability."
-    partner removed successful:                 "%{username} removed from plan accountability."
+    partner added successful:                   "Success! %{username} has been added to plan accountability."
+    partner removed successful:                 "%{username} has been removed from plan accountability."
     make public successful:                     "Success! Your plan is public."
     make private successful:                    "Your plan is now private."
     reminder on successful:                     "Success! Daily reminder emails will be sent."
     reminder off successful:                    "Daily reminders will no longer be sent."
     email delivery on successful:               "Success! Daily readings will be sent via email."
-    email delivery off successful:              "Daily reading will no longer be sent."
-    email delivery updated successful:          "Success! Email delivery settings updated."
-    report on successful:                       "Success! Weekly accountability turned on."
-    report off successful:                      "Weekly accountability turned off."
-    catch up successful:                        "Success! You are now caught up on your readings."
-    restart successful:                         "Plan restarted from the beginning."
+    email delivery off successful:              "Daily reading emails will no longer be sent."
+    email delivery updated successful:          "Success! Email delivery settings have been updated."
+    report on successful:                       "Success! Weekly accountability reports will be sent."
+    report off successful:                      "Weekly accountability reports will no longer be sent."
+    catch up successful:                        "Success! You are now caught up on your reading."
+    restart successful:                         "Your Plan has restarted from the beginning."
     subscribe successful:                       "Great! You're subscribed to this plan."
     which day in plan:                          "Day %{day} of %{total}"
   registration:
@@ -417,7 +417,7 @@ en:
     plans:                                      "Reading Plans"
     users:                                      "Users"
     notes:                                      "Notes"
-    total results:                              "About %{total} results"
+    total results:                              "About %{total} Results"
     suggestion html:                            "Did you mean %{suggestion_link}?"
     all versions:                               "All %{language_name} Versions"
     not working:                                "Sorry, users search isn't working quite yet. Check back soon!"
