added edit link to profile, killed settings widet on profile view, #160

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -179,7 +179,12 @@ en:
     edit profile:                               "Edit Profile"
     update profile:                             "Update Profile"
     my password:                                "Change My Password"
+    edit password:                              "Change Password"
     picture:                                    "Picture"
+    edit picture:                               "Change Picture"
+    edit notifications:                         "Manage Notifications"
+    edit connections:                           "Connected Accounts"
+    edit devices:                               "Connected Devices"
     my recent activity:                         "My Recent Activity"
     user recent activity:                       "%{user}'s Recent Activity"
     my notes:                                   "My Notes"
@@ -293,6 +298,7 @@ en:
       updated picture:                          "Success! You've updated your picture."
       updated notifications:                    "Success! You've updated your notification settings."
       notification errors:                      "The following error(s) prevented updating your notifications:"
+      edit:                                     "Edit"
     password:
       updated:                                  "Success! You've updated your password."
       error:                                    "Sorry, there was an error changing your password."
