fixed bug for numbered book osis strings (for reading plans)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -357,7 +357,9 @@ en:
     subscribe to plan:                          "Start This Plan"
     previous day:                               "Previous Day"
     next day:                                   "Next Day"
-    reading completed (mark and show next):     "Reading Completed"
+    reading completed (mark and show next):     "Next: %{next_reference}"
+    which reading:                              "%{current} of %{total}"
+    done reading:                               "Done"
     read today:                                 "View Today's Reading"
     completion status (below percentage):       "Complete"
     current progress html:                      "Day <b>%{day}</b> of <b>%{total_days}</b>"
