--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,7 @@
 en:
   link:                                         "Link"
   site search:                                  "YouVersion Search"
-  auth error:                                   "Sorry, there was a problem with your username or password. Please sign in to YouVersion to continue. *NC*"
+  auth error:                                   "Sorry, there was a problem with your username or password. Please sign in to YouVersion to continue."
   download:                                     "Download"
   visit link:                                   "Visit Link"
   about title:                                  "About YouVersion"
@@ -33,8 +33,8 @@ en:
   you are no longer following:                  "You are no longer following %{username}"
   user follows:                                 "%{user} is following you."
   user does not follow:                         "%{user} does not follow you."
-  no following found self:                      "You're not following anyone yet. You should visit the <a href='%{link}'>Find Friends</a> page and find some friends! *NC*"
-  no followers found self:                      "You don't have any followers yet. You should visit the <a href='%{link}'>Find Friends</a> page and find some friends! *NC*"
+  no following found self:                      "You're not following anyone yet. Visit the <a href='%{link}'>Find Friends</a> page and find some friends!"
+  no followers found self:                      "You don't have any followers yet. Visit the <a href='%{link}'>Find Friends</a> page and find some friends!"
   no followers found other:                     "No one is following %{username} yet."
   no following found other:                     "%{username} is not following anyone yet."
   no likes found:                               "%{username} hasn't liked anything yet."
@@ -64,10 +64,9 @@ en:
   password prompt:                              "Password:"
   sign in:                                      "Sign in"
   sign in to youversion:                        "Sign in to YouVersion"
-  registered:                                   "Registered"
   remove:                                       "Remove"
   confirm danger:                               "Yes, I'm sure"
-  ago:                                          "ago"
+  registered ago:                               "Registered %{time_ago} ago"
   version header:                               "Version: %{version}"
   bible versions:                               "Bible Versions"
   read this version:                            "Read this Version"
@@ -439,7 +438,6 @@ en:
     total results:                              "About %{total} Results"
     suggestion html:                            "Did you mean %{suggestion_link}?"
     all versions:                               "All %{language_name} Versions"
-    not working:                                "Sorry, users search isn't working quite yet. Check back soon!"
   donate:
     donate now:                                 "Donate Now"
     promo 1:                                    "For every $1 you give, 10 more people get access to the bible on their mobile phone."
