fixed various user styles, closes #159
Change-Id: I8583d3c49f15f221ae55cc76cceaa3efb23bee6a

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,8 @@ en:
   no followers found other:                     "No one is following %{username} yet."
   no following found other:                     "%{username} is not following anyone yet."
   no likes found:                               "%{username} hasn't liked anything yet."
+  no notes found:                               "%{username} doesn't have any notes."
+  no recent activity:                           "%{username} does not have any recent activity."
   followers:                                    "Followers"
   following:                                    "Following"
   highlight:                                    "Highlight"
@@ -320,6 +322,7 @@ en:
     labels label:                               "Labels:"
     title:                                      "Bookmarks"
     not found:                                  "Bookmarks give you a quick reference guide to your favorite passages or to the last chapter you read in a particular book. To add a bookmark, select a verse in the Bible reader and then click the Selected button at the top of the reader."
+    other user not found:                       "%{username} hasn't saved any bookmarks yet."
     successfully created:                       "Bookmark Added"
     successfully deleted:                       "Bookmark Removed"
     labels placeholder:                         "Separate multiple labels with commas."
