adds badges views, closes #123
Change-Id: Ie57d046011fa9c14b5dd13dc5a3d3099ccb42310

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,10 +40,15 @@ en:
   no likes found:                               "%{username} hasn't liked anything yet."
   no notes found:                               "%{username} doesn't have any notes."
   no recent activity:                           "%{username} does not have any recent activity."
+  no badges found yourself:                     "You haven't earned any badges yet."
+  no badges found other:                        "%{username} hasn't earned any badges yet."
+  see users badges:                             "See all of %{username}'s badges"
   followers:                                    "Followers"
   following:                                    "Following"
   highlight:                                    "Highlight"
   bookmark:                                     "Bookmark"
+  earned badge date:                            "Earned by %{username} %{ago} ago"
+  badges title:                                 "Badges"
   currently selected:                           "Currently Selected:"
   read reference:                               "Read %{reference}"
   compare all versions:                         "Compare All Versions"
