adding disabled checkbox for unsubscribed users previewing a plan, killed selected dd background for devotional plans, only show 'next' button on devo plans for refs with more than 5 verses, center version dropdown under start/read buttons

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -420,6 +420,7 @@ en:
     restart successful:                         "Your Plan has restarted from the beginning."
     subscribe successful:                       "Great! You're subscribed to this plan."
     which day in plan:                          "Day %{day} of %{total}"
+    must start to complete:                     "Start this plan to complete readings!"
   registration:
     benefits title:                             "Get the Full Experience"
     benefits blurb:                             "Creating a YouVersion account gives you access to more features like bookmarks and notes. They'll show up on any device where you're signed in. An account also makes it easier to share the Bible with your friends, so take a minute or two and sign up!"
