--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -104,6 +104,7 @@ en:
   friends:                                      "Friends"
   groups:                                       "Groups"
   mobile:                                       "Mobile"
+  live:                                         "Live/Groups"
   first page:                                   "First Page"
   last page:                                    "Last Page"
   next page:                                    "Next Page"
