--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -116,6 +116,7 @@ en:
   percentage display:                           "%{number}%"
   myself:                                       "Me"
   none found:                                   "We couldn't find anything to match your criteria. Try widening your search."
+  paginated items shown:                        "%{first_shown}&ndash;%{last_shown} of %{total_available}"
   likes:
     my likes:                                   "My Likes"
     all likes:                                  "All Likes"
@@ -133,7 +134,6 @@ en:
     save:                                       "Save"
     select from list:                           "--Select--"
     edit note:                                  "Edit Note"
-    my notes:                                   "My Notes"
     all notes:                                  "All Notes"
     community notes:                            "Community Notes"
     new note:                                   "New Note"
@@ -203,7 +203,8 @@ en:
     user recent activity:                       "%{user}'s Recent Activity"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}'s Notes"
-    my friends:                                 "My Friends"
+    my friends:                                 "Friends"
+    my notes:                                   "Notes"
     user friends:                               "%{user}'s Friends"
     my bookmarks:                               "My Bookmarks"
     user bookmarks:                             "%{user}'s Bookmarks"
