--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -460,7 +460,7 @@ en:
     promo 2:                                    "With YouVersion, the Bible is always nearby. Watch our video."
     promo 3:                                    "This year over 5 billion people will use a mobile phone. Donate now."
     headline:                                   "Everyone needs God’s Word."
-    subhead:                                    "You can help put a Bible at the fingertips of millions."
+    subhead:                                    "Help people around the world have the Bible at their fingertips."
     copy:                                       "Imagine if you could give everyone in the world a free Bible. When you give to YouVersion, you can do just that. We're alive during a time that others have only dreamed of &ndash; when anyone with a phone can access the Bible and experience the story of God's love for us. With your support, we can continue to help more people spend more time in Scripture."
   download ad:
     title:                                      "Download the Free Bible App"
