--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -517,3 +517,26 @@ en:
       lifestyle:                                "Image Collection: Lifestyle"
       screencast:                               "YouVersion Screencast"
     links title:                                "Media Coverage Links"
+  mobile page:
+    h2:                                         "God’s Word is with you."
+    h3:                                         "YouVersion is Global"
+    h3 sub:                                     "Available in hundreds of languages worldwide."
+    main:                                       "Tens of millions of people are using the Bible App™ to make God’s Word a part of their daily lives. Download the free app and access your bookmarks, notes, and reading plans from anywhere. Enjoy hundreds of versions, including audio, all on your mobile device."
+    button h4:                                  "Go to youversion.com/download"
+    button h4 sub:                              "On Your Mobile Device"
+    download now:                               "Download The Bible App Now"
+    what people:                                "What people are saying about the free Bible app..."
+    t1:                                         "I always have the Word."
+    t1 copy:                                    "I've bookmarked passages that are important to me. I've even read the whole thing through in a year thanks to the reading plans."
+    t2:                                         "Great program!"
+    t2 copy:                                    "This app helps keep me organized and reading God's Word every single day. It is easy to use and offers multiple features ... Love it!"
+    t3:                                         "Wonderful app."
+    t3 copy:                                    "Great app with a wide selection of Bibles to choose from. … The audio Bibles are also wonderful and easy to understand."
+    iphone ipad:                                "iPhone/iPad"
+    android:                                    "Android"
+    blackberry:                                 "BlackBerry"
+    windows phone:                              "Windows Phone"
+    hp palm:                                    "HP/Palm"
+    java:                                       "Java"
+    symbian:                                    "Symbian"
+    mobile web:                                 "Mobile Web"
