--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -150,6 +150,7 @@ en:
     notes i like:                               "Notes I Like"
     see my likes:                               "See All My Likes"
   ref:
+    clear verses:                               "Clear Selected Verses"
     choose book and chapter:                    "Choose Book + Chapter"
     choose version:                             "Choose Version"
     choose second version:                      "Choose Secondary Version"
@@ -164,6 +165,7 @@ en:
     settings:                                   "Reader Settings"
     invalid chapter title:                      "About This Version"
     invalid chapter text:                       "This chapter doesn't exist in this version."
+    invalid secondary chapter text:             "This chapter doesn't exist for your preferred secondary version."
     select another chapter:                     "Pick a Different Chapter"
     view in reader:                             "View %{reference} in Reader"
   users:
