--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,8 +67,8 @@ en:
   invalid login:                                "Invalid Username or Password"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
-  username or email prompt:                     "Username (or Email):"
-  password prompt:                              "Password:"
+  username or email prompt:                     "Username (or Email)"
+  password prompt:                              "Password"
   sign in:                                      "Sign in"
   sign in to youversion:                        "Sign in to YouVersion"
   remove:                                       "Remove"
@@ -173,7 +173,6 @@ en:
     profile form errors:                        "The following error(s) prevented updating your profile:"
     email address:                              "Email Address"
     user name:                                  "Username"
-    password title:                             "Password"
     agreement:                                  "I agree to the YouVersion %{terms_link}."
     terms and conditions:                       "terms and conditions"
     facebook sign up success:                   "Great! You've authorized with Facebook. Pick a YouVersion username and password to continue."
