--- a/config/locales/zh_cn.yml
+++ b/config/locales/zh_cn.yml
@@ -1,20 +1,422 @@
----
-zh_cn:
-  language name: 简体中文
-  signed in as: "Signed in as %{user}"
-  sign out: "Sign out"
-  youversion: YouVersion French
-  username or email prompt: "Username (or email):"
-  password prompt: "Password:"
-  sign in: "Sign in"
-  version header: "Version: %{version}"
-  bible versions: "Bible Versions"
-  read this version: "Read this version"
-  users:
-    creation form errors: "The following error(s) prevented creation of your account:"
-    email address: "Email address:"
-    user name: "User name:"
-    password: "Password:"
-    agreement: I agree to the YouVersion terms and conditions.
-    register: Register
-    confirm email: "Thanks for registering! Please check your email and click the link to confirm."
+zh_CN: 
+  "link": "链接"
+  "site search": "YouVersion 搜索"
+  "auth error": "抱歉，用户名或密码出错。请再试登录YouVersion。 "
+  "download": "下载"
+  "visit link": "访问链接"
+  "about title": "关于YouVersion"
+  "make a donation": "事工奉献"
+  "thanks for your donation": "感谢您的奉献！"
+  "thanks authorization": "谢谢您的捐赠！您的授权密码是%{code}。"
+  "donation error": "很抱歉，您的奉献出错，请重试。"
+  "created ago": "%{time_ago}前创建"
+  "copy": "复制"
+  "copy confirmed": "复制成功！"
+  "new note": "新建笔记"
+  "twitter": "Twitter"
+  "facebook": "Facebook"
+  "share success": "您的信息已经成功分享了。"
+  "share error": "抱歉！分享信息时出错！请重试！"
+  "error following user": "抱歉，关注该用户时发生错误。"
+  "error unfollowing user": "抱歉，取消关注该用户时发生错误。"
+  "google plus": "Google +"
+  "connect to": "连接到您的 %{connection} 帐户"
+  "connected as user": "您已经以 %{username} 连接到%{connection}"
+  "deleted connection": "成功移除您与 %{connection}的连接"
+  "deleted connection error": "抱歉，在移除您与 %{connection}的连接时发生错误。"
+  "remove connection": "移除"
+  "connection users": "这是一些您连接的 %{connection} 上的YouVersion 用户。 "
+  "connection marketing": "与朋友分享YouVersion将非常精彩！将您的YouVersion帐户与其它社交网络绑定，以便在YouVersion即时寻找和关注您的朋友们。绑定帐户后，仅需轻轻一触，便可分享内容。没有您的许可，我们将绝不发布任何信息。"
+  "next step connections": "下一步：绑定您的帐户，并查找好友。"
+  "you are now following": "您已成功关注  %{username}"
+  "you are no longer following": "您已取消关注  %{username}"
+  "user follows": "%{user} 关注了您。"
+  "user does not follow": "%{user} 已取消对您的关注。"
+  "no following found self": "您还没有关注任何人。您可以访问  <a href='%{link}'>Find Friends</a> 并寻找朋友！"
+  "no followers found self": "目前还没有人关注您。请您访问 <a href='%{link}'>寻找朋友</a> 页面，就可以找到一些朋友啦！ "
+  "no followers found other": "现在还没有人关注%{username}。"
+  "no following found other": "%{username} 现在没有关注任何人。"
+  "no likes found": "%{username} 还没有觉得什么东西很赞。"
+  "no notes found": "%{username} 没有任何笔记。"
+  "no recent activity": "%{username} 最近没有任何近期活动。"
+  "no badges found yourself": "您还没有得到任何徽章。"
+  "no badges found other": "%{username} 还没有得到任何徽章。"
+  "see users badges": "查看%{username} 的所有徽章"
+  "followers": "关注我的"
+  "following": "我的关注"
+  "highlight": "标记"
+  "bookmark": "书签"
+  "earned badge date": "%{username} 在 %{ago} 之前得到了徽章"
+  "badges title": "徽章"
+  "currently selected": "已选择："
+  "read reference": "阅读%{reference}"
+  "compare all versions": "比较所有版本"
+  "link will be added": "将被添加"
+  "my picture": "上传我的图片"
+  "my notifications": "管理通知"
+  "my connections": "已绑定帐户"
+  "my devices": "已绑定设备"
+  "language name": "英文"
+  "sign in": "登录"
+  "sign up": "注册"
+  "have an account": "已有帐户？"
+  "no account": "还没有注册？"
+  "successful sign-in": "以 %{user} 登录！"
+  "successful sign-out": "已注销！"
+  "invalid login": "用户名或密码无效"
+  "sign out": "登出"
+  "youversion": "YouVersion"
+  "username or email prompt": "用户名(或电子邮件地址）："
+  "password prompt": "密码："
+  "sign in to youversion": "登录YouVersion帐户"
+  "remove": "删除"
+  "confirm danger": "是的，我确定。"
+  "registered ago": "%{time_ago}之前已注册 "
+  "version header": "版本：%{version}"
+  "bible versions": "圣经版本"
+  "read this version": "阅读这个版本"
+  "reader": "阅读器"
+  "lifechurch short url": "LifeChurch.tv"
+  "about": "关于"
+  "jobs": "工作机会"
+  "privacy policy": "隐私条例"
+  "terms": "条款"
+  "press": "新闻"
+  "support": "支持"
+  "donate title": "奉献"
+  "choose language field": "选择您的语言:"
+  "settings": "设置"
+  "profile": "详细资料"
+  "find friends": "寻找朋友"
+  "search placeholder": "搜索..."
+  "search": "搜索"
+  "book": "书卷"
+  "try the beta": "尝试测试版"
+  "welcome to the beta": "欢迎来到新的YouVersion.com!"
+  "selected": "已选的"
+  "chapter": "章节"
+  "bible": "圣经"
+  "plans title": "计划"
+  "notes title": "笔记"
+  "friends": "朋友"
+  "groups": "群组"
+  "mobile": "移动"
+  "live": "现场活动/群组"
+  "first page": "第一页"
+  "last page": "最后一页"
+  "next page": "前一页"
+  "previous page": "后一页"
+  "invalid username or password": "无效的用户名或密码。"
+  "show all bookmarks": "显示所有的%{total}书签"
+  "show all notes": "显示全部 %{total} 笔记"
+  "recent bookmarks": "最近的书签"
+  "percentage display": "%{number}%"
+  "myself": "本人"
+  "none found": "我们没有找到任何符合您的分类检索的内容，请扩大搜索范围。"
+  "paginated items shown": " %{total_available}中的 %{first_shown}&ndash;%{last_shown}"
+  "160 character limit": "160个字或更少"
+  "recent versions": "最近使用的圣经版本"
+  "likes": 
+    "my likes": "我喜欢的"
+    "all likes": "所有的喜欢"
+    "none exist blurb": "对不起，这儿没有喜欢的！"
+    "likes": "喜欢"
+    "like button text": "喜欢"
+    "unlike button text": "不喜欢"
+  "notes": 
+    "creation form errors": "以下错误阻止您记笔记："
+    "status field": "笔记状态："
+    "reference field": "经节："
+    "version field": "版本："
+    "title field": "标题："
+    "content field": "内容:"
+    "save": "保存"
+    "select from list": "--选择--"
+    "edit note": "编辑笔记"
+    "all notes": "所有笔记"
+    "community notes": "社区笔记"
+    "new note": "新的笔记"
+    "edit": "编辑"
+    "delete": "删除这篇笔记"
+    "confirm delete": "是的，我确定！"
+    "write new": "写新笔记"
+    "not found": "YouVersion允许你通过视频，音频，图象，文字，和链接把圣经中的一节或多节和其他网站联系起来。当你灵修时，你可以通过这种方式与YouVersion社区分享你所学所想。现在就可以在圣经阅读器中选择一节并加添笔记。就这么简单。"
+    "cancel": "取消"
+    "pop out": "弹出"
+    "notes i like": "我喜欢的笔记"
+    "see my likes": "我所有喜欢的"
+    "my notes": "我的笔记"
+  "ref": 
+    "clear verses": "清除选中的经节"
+    "choose book and chapter": "选择书卷＋章节"
+    "choose version": "选择版本"
+    "choose second version": "选择第二个版本"
+    "share": "分享"
+    "share now": "立即分享"
+    "selected": "选中的"
+    "preferences": "偏好"
+    "listen": "听"
+    "parallel": "并行"
+    "full screen": "全屏"
+    "about the version": "关于  %{version}"
+    "settings": "阅读器设置"
+    "invalid chapter title": "关于这个版本"
+    "invalid chapter text": "所选择的章节不在目前的圣经版本中。"
+    "select another chapter": "选择另外的章节"
+    "view in reader": "在阅读版面查看%{reference}"
+    "about the": "关于"
+  "users": 
+    "creation form errors": "以下错误阻止您创建帐号："
+    "profile form errors": "以下错误阻止您更新个人资料:"
+    "email address": "电子邮件地址"
+    "user name": "用户名"
+    "agreement": "我同意YouVersion的规定和条例 %{terms_link}.。 "
+    "terms and conditions": "声明和条款"
+    "facebook sign up success": "恭喜！您已通过Facebook授权。请输入您的用户名和密码并继续。"
+    "register": "注册"
+    "thanks for registering": "感谢注册！"
+    "welcome to youversion": "欢迎来到YouVersion 社区！"
+    "confirm email": "请查收邮件，并点击其中链接确认注册。"
+    "sign up for an account": "注册免费YouVersion帐户"
+    "follow user": "关注%{user}"
+    "follow": "关注"
+    "unfollow": "取消关注"
+    "following title": "我关注的人"
+    "user does not follow you": "%{user}没有关注你。 "
+    "recent activity": "最近活动"
+    "started following": "开始关注"
+    "subscribed to plan": "用户订阅了 %{plan} 。"
+    "reading": "阅读此计划的用戶。"
+    "subscribed previously": "%{time_ago}前已开始"
+    "sign in for settings": "您必须登录才能看到您的个人资料。"
+    "my profile": "我的个人资料"
+    "edit profile": "编辑个人资料"
+    "update profile": "更新个人资料"
+    "my password": "更改密码"
+    "edit password": "更改密码"
+    "picture": "相片"
+    "edit picture": "更改图片"
+    "edit notifications": "管理通知"
+    "edit connections": "连接的帐号"
+    "edit devices": "连接的设备"
+    "my recent activity": "我最近的活动"
+    "user recent activity": "%{user}最近的活动"
+    "my notes": "我的笔记"
+    "user notes": "%{user}的笔记"
+    "my friends": "我的好友"
+    "user friends": "%{user}的好友"
+    "my bookmarks": "我的书签"
+    "user bookmarks": "%{user}的书签"
+    "my likes": "我喜欢的"
+    "user likes": "%{user}所喜欢的"
+    "revised date": "最后一次修改在%{date}"
+    "update email copy": " 输入一个新的电邮地址和点击『更新电邮』。我们将发送一个链接给您来确认您的新电邮地址。"
+    "update email button": "更新电邮"
+    "update email check": "请查看您的电邮并点击链接来确认您的新电邮地址。"
+    "confirm update email success": "谢谢！您已经成功更新了你的电邮地址。"
+    "confirm update email error": "很抱歉，无法更改您的电子邮件！"
+    "invalid email forgot": "抱歉，没有找到与该电子邮件地址关联的帐户。请再尝试。"
+    "send new password button": "发送新密码"
+    "forgot password copy": "输入您的电邮地址并点击『发送新密码』，我们将会电邮一个新的密码给您。"
+    "forgot password check": "成功了！请进入您的电子邮件查看您的新密码。"
+    "yes reset": "是的，重设我的密码"
+    "yes reset and log out": "是的，请让我登出并重设我的密码"
+    "forgot password": "忘记密码？"
+    "privacy": 
+      "policy": "%{youversion} 隐私条款"
+      "intro": "YouVersion，作为LifeChurch.tv 拥有并运营的网站和应用软件，知道您关心自己的信息是如何被使用和分享的。我们希望以下的说明能够帮助您理解YouVersion 将如何收集，使用和保护您向我们提供的信息。我们不会在隐私条款叙述的情况之外使用或者与其他人分享您的信息。"
+      "what we collect": "我们收集的信息及其用途"
+      "your information title": "您提供的信息"
+      "your information text": "当您注册YouVersion 的帐户，或者其他 LifeChurch.tv 的服务或任何需要注册的活动的时候，我们会向您询问您的个人资料（包括您的姓名，邮件地址和一个帐户密码）。我们会把您申请帐户时提交的资料与LifeChurch.tv 其他服务项目或者第三方所提供的信息合并，以便我们能够向您提供更好的服务并提高我们服务的质量。对于某些服务，我们会允许您决定是否合并这些信息。"
+      "device id title": "唯一设备身份"
+      "device id text": "当您使用YouVersion圣经软件时，我们可以获取您的唯一设备身份（“UDID”）和/或IP地址。通过您的UDID，我们可以为您提供量身定做的服务。获取UDID信息是为了统计使用我们的服务或部分服务的设备总数，跟踪使用总量，分析数据，以及更有效地与您沟通。我们可以把您的UDID和第三方信息结合起来，让您获得更佳体验，提升我们的服务。我们不会与第三方共享与您的UDID相关的个人信息。"
+      "cookies title": "Lifechurch.tv 网站的 cookies"
+      "cookies text": "当您访问%{link}时，我们可以发送一个或多个cookie到您的电脑，这样我们就能识别您的浏览器。（Cookie就是一种小型文档，包含一连串的字符。）接受我们的cookie可以使浏览器在您浏览不同网页的时候记忆您的用户偏好。虽然大多数浏览器默认接受cookie，但您可以设置浏览器拒绝所有cookie，或提醒您正在接收cookie。如果您关闭了cookie的接收，YouVersion的部分功能和服务将无法正常进行。"
+      "log title": "日志信息"
+      "log text": "当您使用LifeChurch.tv服务时，我们的服务器会在您访问我们的网站时自动记录您的浏览器所发送的信息。这些服务器记录的信息包括您的网页请求，IP地址，浏览器类型，浏览器语言，请求日期与时间，以及可以识别您的浏览器的一个或多个cookie。"
+      "communications title": "用户讨论"
+      "communications text": "您通过 %{link} 提交的个人信息和个人请求会被发送到群组管理员那里。群组管理员或者其中一个管理员将会处理这些信息。当您通过发送电子邮件或者其他信息交流方式给LifeChurch.tv 所属的任何一个网站，我们将记录这些信息来处理您的问题，回应您的请求并改善我们的服务。"
+      "third party title": "第三方站点"
+      "third party text": "本隐私政策仅适用于由LifeChurch.tv所有并运营的网站和应用程序。 LifeChurch.tv 不能控制其他从我们的网页和服务链接出去的其他网站。这些其他的网站可能在您的电脑上储存它们的缓存或其他文件，收集数据或者要求您的个人资料。如果选择访问他们的网站，您需要详细了解他们各自的隐私政策。"
+      "information use title": "我们会如何使用您的信息？"
+      "information use text": "当您注册一个要求注册的特定服务的时候，我们要求您提供个人信息。如果LifeChurch.tv 使用这些信息的目的与与当初收集信息的目的不同，我们在使用前将首先征求您的同意。除隐私政策或其他特别服务条款明确规定的目的外，我们不会收集或者使用任何敏感性的信息，除非我们事先已取得您的同意。您可以拒绝向我们的任何服务提交个人信息，在这种情况下，LifeChurch.tv 有可能不能够给您提供相关的服务。"
+      "information sharing title": "我们会如何分享您的信息？"
+      "information security title": "信息安全"
+      "data integrity title": "数据完整性"
+      "information access title": "获取并更新个人信息"
+      "enforcement title": "强制条款"
+      "questions title": "问题"
+      "questions text": "任何与个人隐私政策有关的问题将被转发到%{mailto_link}"
+    "terms": 
+      "title": "使用条款"
+      "acceptance title": "接受使用条款"
+      "description title": "服务说明"
+      "registration title": "您需要注册"
+      "privacy title": "LifeChurch.tv隐私政策"
+      "privacy text": "您的注册资料和其他信息受到我们的隐私政策（位于%{terms_link}）所约束。您了解，通过YouVersion 的使用，您同意这些信息的收集和使用（如隐私政策所列），包括由%{lifechurch_link} 把这些信息转移给美国或者其他国家储存，处理和使用。"
+      "account title": "会员帐号，密码和安全性"
+      "account text": "在完成You Version 的注册过程中，您将收到一个密码和帐户设置。您对密码和帐户有保密责任，并且对于在您的帐户和密码下而发生的一切活动，您承担全部责任。您同意： %{item}(a) 立刻通知 LifeChurch.tv 一切未经授权的使用您的帐号或者密码或者其他违反数据安全的行为，和%{item}(b) 确保您在每次使用您的帐号之后安全退出。"
+      "conduct title": "会员行为"
+      "interstate title": "LifeChurch.tv网络的州际沟通性质"
+      "interstate text": "您确认在使用YouVersion 的时候， 您将通过LifeChurch.tv 的计算机网络对外发送信息，其中部分信息分布到全球。所以，不管您在发送信息的时候身在何处，有些原本是属于州内性质的信息传送也有可能成为州际性的信息传送。相应地，您确认在使用YouVersion 的时候会产生洲际数据交换。"
+      "international title": "国际用户特别注意"
+      "international text": "认识到互联网络的全球性，您同意遵守所有关于互联网行为和可接受内容的所有地方行法规，具体而言，您同意遵守所有关于从美国或者您居住的国家传输出口的技术数据适用的法律。"
+      "content title": "提交或提供列入服务的内容"
+      "contributions title": "向LifeChurch.tv捐赠"
+      "contributions text": "在提交任何意见，建议，文件，和计划（“提案”）给LifeChurch.tv 时，您将确认并同意：%{item}(a) 您的提案中不包括任何机密或者知识产权信息； %{item}(b) LifeChurch.tv 对您的提案不承担任何明示或默示的保密义务；%{item}(c) LifeChurch.tv 有权为任何目的、以任何方式，通过全球任何媒体使用或者公开（或者不使用或不公开）您的提案； %{item}(d) LifeChurch.tv 可能已经拥有与您的提案相类似的处于筹划或者开发阶段的方案；%{item}(e) 您的提案将自动成为 LifeChurch.tv 的财产，但是LifeChurch.tv 无需对您承担任何义务； %{item}(f) 在任何情况下，您都无权向LifeChurch.tv 要求赔偿或者补偿。"
+      "indemnity title": "补偿和责任免除"
+      "resale title": "不得转售服务"
+      "resale text": "您同意不会为了商业目的而复制，复印，出售，交易，贩卖或者开发任何YouVersion 的 内容（包括您的LifeChurch.tv 的用户名）、YouVerion 的使用，或者访问YouVerion 。"
+      "storage title": "关于使用和存储的惯例"
+      "modifications title": "服务的修改"
+      "modifications text": "不管是否事先通知，LifeChurch.tv 保留在任何时候，不定期地，暂时性或者永久性修改或者中断YouVersion (或者其中任何部分)的权利。您同意LifeChurch.tv 不必就YouVersion的任何修改、暂停或终止而对您或者任何第三方承担任何的责任。"
+      "termination title": "终止服务"
+      "termination text": "您同意，在特定情况下，LifeChurch.tv可以不事先通知，而自行决定在任何时间以任何理立即终止您的LifeChurch.tv 的帐号和您对YouVersion 的访问权，并且LifeChurch.tv对于终止您的帐户或者访问权无需向您或者任何第三方承担任何责任。"
+      "dealings title": "第三方须知"
+      "dealings text": "您确认，您与任何在YouVersion 上认识和找到的团体之间的交易往来只存在于您们双方之间。您同意LifeChurch.tv 将对由于这些交易往来而产生的任何损失和损害不负任何责任和义务。"
+      "links title": " 链接"
+      "rights title": "Lifechurch.tv的所有权"
+      "limitation title": "有限责任"
+      "exclusions title": "排除和限制"
+      "exclusions text": "有些司法条例不允许排除某些担保或者限制，或者排除对于意外的或者间接的损失的责任。因此，以上涉及的第19条和第20条的限制可能不适用于您的情况。"
+      "beneficiaries title": "无第三方受益人"
+      "beneficiaries text": "您同意，除非在使用条款里另有规定，本协议没有第三方受益人。"
+      "notice title": "通知"
+      "notice text": "LifeChurch.tv 会通知您关于使用条款的修改，通知的方式包括但不仅限于电子邮件，普通邮件，手机短信，手机多媒体信息，文字信息，在YouVersion 上的公告，或者其他已知的或者正在开发中的合理的方式。"
+      "trademark title": "商标信息"
+      "trademark text": "与LifeChurch.tv有关的图标、服务标志、产品和服务名称都是LifeChurch.tv 的商标 （“LifeChurch.tv 标志”）。如果没有事先得到LifeChurch.tv 的同意，您同意不以任何方式使用或者展示 LifeChurch.tv 标志。"
+      "copyright title": "制作版权或者知识产权侵犯声明的通知和过程"
+      "copyright text": "lifechurch .tv尊重他人的知识产权。我们提倡我们的用户履行同样的义务,特别是使用到与youversion相关的内容时"
+      "general title": "一般信息"
+    "profile": 
+      "first name": "名"
+      "last name": "姓"
+      "email": "电邮地址"
+      "location": "地址"
+      "postal code": "邮编"
+      "website": "网址"
+      "country": "国家或地区"
+      "timezone": "时区"
+      "language": "语言"
+      "updated": "您已经成功地更新了您的个人资料。"
+      "error": "对不起，在更新您个人资料时出现错误。"
+      "current password": "当前密码"
+      "new password": "新的密码"
+      "confirm password": "确认密码"
+      "avatar file": "选择含有您像片的文件"
+      "avatar help": "像片可以是JPG，PNG，或GIF格式。您的像片会转换成48x48的缩略图。像片文件的最大尺寸是1MB。"
+      "updated picture": "您的像片被成功地更新了。"
+      "updated notifications": "您的通知设置被成功地更新了。"
+      "notification errors": "以下错误导致无法更新您的通知："
+      "edit": "编辑"
+      "your current picture": "您的当前像片："
+    "password": "密码"
+    "notifications": 
+      "badges": "通知我我已赢得的徽章"
+      "follower": "当有人关注我时请通知我！"
+      "newsletter": "通知我有关YouVersion的公告。"
+      "note_like": "当有人喜欢我的笔记请通知我。"
+      "reading_plans": "如果有关于我已开始的读经计划的信息，通知我。"
+      "update": "更新通知"
+    "change my password": "修改我的密码"
+    "update my picture": "更新我的相片"
+    "manage notifications": "管理通知"
+    "connected accounts": "连接的帐号"
+    "connected devices": "连接的设备"
+  "bookmarks": 
+    "title field": "标题"
+    "lables": "标签"
+    "labels label": "标签："
+    "title": "书签"
+    "not found": "书签能使您记住上次阅读的地方，快递地查询到您喜欢的章节或一本书中您上次阅读的章节。添加书签的方法是在圣经阅读器中选择一节，然后点击书签按钮即可。"
+    "other user not found": "%{username}还没有保存任何书签。"
+    "successfully created": "书签添加成功"
+    "successfully deleted": "书签已经移除"
+    "labels placeholder": "用逗号分开多个标签"
+    "save": "保存书签"
+    "confirm delete": "是的，我确定。"
+  "badges": 
+    "earned a badge": "赢得了一个徽章"
+    "my badges": "我的徽章"
+    "user badges": "%{user}的徽章"
+  "plans": "读经计划"
+  "registration": 
+    "benefits title": "获取完整的体验"
+    "benefits blurb": "花一两分钟去创建YouVersion账户吧！它可以让你使用很多诸如书签和笔记等这些只有在登录后才能使用的功能。创建帐户还可以让您更方便地和朋友分享圣经！"
+    "plan blurb": "看来您想开始一个读经计划！明智之举！读经计划可以帮助您，使圣经成为您日常生活中的一部分。赶紧登入或创建一个帐号就可以开始了！"
+    "bookmark blurb": "看来您想使用书签功能！太赞了！书签可以帮助您记忆、分享和标识您最喜欢的经句。赶紧登入或创建一个帐号就可以开始了！"
+    "friends blurb": "看起来您想使用YouVersion和朋友互动交流。好注意！您可以和朋友分享读经内容，相互激励帮助跟进读经进度。登入或创建一个帐号就可以开始了！"
+    "highlight blurb": "看起来您想高亮显示一段经文，太棒了！高亮显示经文可以帮您记忆和整理您喜欢的经节。登入或创建一个帐号然后赶紧开始吧！"
+    "note blurb": "看起来您想就经文写一段笔记，太棒了！读经笔记可以帮您记忆和整理圣经中的真理。登入或创建一个帐号并赶紧开始吧！"
+  "audio": 
+    "none": "很抱歉！本圣经版本不提供语音版本。"
+    "chapter only": "抱歉，经句不支持语音功能。请在阅读器里查看整章圣经的语音功能。"
+    "close player menu": "关闭"
+  "highlights": 
+    "creation error": "抱歉，不能高亮显示。"
+    "delete error": "抱歉，不能取消高亮显示。"
+  "searching": 
+    "bible": "圣经"
+    "plans": "读经计划"
+    "users": "用户"
+    "notes": "读经笔记"
+    "total results": "大约有 %{total} 个结果"
+    "suggestion html": "您是指%{suggestion_link}吗？"
+    "all versions": "所有%{language_name}版本"
+  "donate": "捐赠"
+  "download ad": 
+    "title": "下载免费的圣经软件"
+    "line 1": "几百种不同版本的圣经"
+    "line 2": "不同语言版本的圣经"
+    "line 3": "常伴您的身边。"
+    "download": "现在下载"
+  "about page": 
+    "relevancy": "关联"
+    "relevancy copy": "在过去的年代，人们能够接触到圣经的方式是很有限的。现今的时代，这不再是个问题了。然而，很多有机会接触到圣经的人认为圣经当中的信息对于他们的生活完全没有用处。与此同时，有另外一些人却相信圣经与他们每日的生活紧密相连。"
+    "information revolution": "信息革命"
+    "information revolution copy": "在过去的十年，互联网给我们带来革命性的改变。通过分享，投稿，创造，广播和通讯，使我们更容易地向世界上的其他人表达我们是谁和我们的信仰。"
+    "youversion copy": "自从1996年开始，LifeChurch.tv 就致力于带领人们成为基督的虔诚跟随者。因此，我们一直在寻找一些新的方法来帮助人们在每日的生活中都与圣经连结。在过去的几年中，通过吸收不同的技术和策略我们的方法在不断的改变。但是我们的核心，我们的焦点却一直是努力阐释和教导人们上帝的话语是如何与每个人关联的，不管他们处于人生的哪个阶段。"
+    "youversion copy 2": "YouVersion 代表LifeChurch.tv 事工的一个新领域。我们不只是用一些创新技术建立一个影响世界的工具，更重要的，我们让那些发现圣经与他们的生活有相关性的人们与神建立关系。"
+    "partners title": "鸣谢我们的合作伙伴"
+    "translation title": "我们的翻译团队"
+  "press page": 
+    "title": "新闻区"
+    "contact header": "新闻联系"
+    "contact header 2": "网站附近"
+    "phone": "手机版"
+    "email": "电子邮件"
+    "blog": "YouVersion博客消息"
+    "facebook": "YouVersion的Facebook页面"
+    "twitter": "YouVersion的Twitter页面"
+    "lead copy": "以网络圣经YouVersion.com 为基础，圣经软件是一个免费的可以被安装在几乎所有手提电话的电子圣经。圣经软件允许读者阅读圣经，在他们的社交网络上保存经文，标识他们喜欢的段落，除此之外&mdash; 所有这些都与他们日益增长的生活方式相符合。"
+    "resources title": "新闻资源"
+    "resources": 
+      "about": "关于YouVersion和圣经软件"
+      "history": "YouVersion历史和统计"
+      "manual": "YouVersion 手册"
+    "images title": "YouVersion徽标和图像"
+    "images": 
+      "logos": "YouVersion 徽标包"
+      "icons": "圣经软件图标"
+      "infographic": "图表：圣经软件使用统计"
+      "iphone": "图像采集：iPhone"
+      "ipad": "图像采集：iPad"
+      "android": "图像采集：安卓"
+      "blackberry": "图像采集：黑莓"
+      "lifestyle": "图像采集：生活方式"
+      "screencast": "YouVersion截屏"
+    "links title": "媒体报道的链接"
+  "mobile page": 
+    "iphone ipad": "iPhone/iPad"
+    "android": "安卓"
+    "blackberry": "黑莓手机"
+    "windows phone": "Windows Phone"
+    "hp palm": "HP/Palm"
+    "java": "Java"
+    "symbian": "Symbian"
+    "mobile web": "移动网络"
+  "registered": "注册的"
+  "ago": "以前"
+  "are you sure": "您确定吗?"
+  "signed in as": "用%{user}登录"
+  "highlighted": "高亮的"
