killing hungarian and englshishing spanish lang name

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -56,7 +56,7 @@ es:
   "my notifications": "Gestionar notificaciones\n"
   "my connections": "Cuentas conectadas"
   "my devices": "Dispositivos conectados"
-  "language name": "Inglés"
+  "language name": "Español"
   "sign in": "Ingresar"
   "sign up": "Registrarse"
   "have an account": "Ya tiene una cuenta?"
