language names corrected

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -17,7 +17,7 @@ bg:
   "link will be added": "Ще бъде добавено"
   "my picture": "Обнови снимката ми"
   "my devices": "Свързани устройства"
-  "language name": "Английски"
+  "language name": "български"
   "sign in": "Влез"
   "sign up": "Регистрация"
   "sign out": "Отписване"
