--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -56,7 +56,7 @@ de:
   "my notifications": "Benachrichtigungen verwalten"
   "my connections": "Verbundene Konten"
   "my devices": "Verbundene Geräte"
-  "language name": "Englisch"
+  "language name": "Deutsch"
   "sign in": "Anmelden"
   "sign up": "Registrieren"
   "have an account": "Du hast schon ein Konto?"
