--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -29,7 +29,7 @@ id:
   "my notifications": "Atur notifikasi Email"
   "my connections": "Akun terkait"
   "my devices": "Perangkat terkait"
-  "language name": "Bahasa Inggris"
+  "language name": "Indonesia"
   "sign in": "Masuk"
   "successful sign-in": "Masuk sebagai %{pengguna}!"
   "successful sign-out": "Keluar!"
