--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -56,7 +56,7 @@
   "my notifications": "Håndter varslinger"
   "my connections": "Tilkoblede kontoer"
   "my devices": "Tilkoblede enheter"
-  "language name": "Engelsk"
+  "language name": "norske"
   "sign in": "Logg inn"
   "sign up": "Registrer deg"
   "have an account": "Har du allerede en konto?"
