--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -56,7 +56,7 @@ pl:
   "my notifications": "Zarządzaj powiadomieniami"
   "my connections": "Połączone konta"
   "my devices": "Połączone urządzenia"
-  "language name": "Angielski"
+  "language name": "polski"
   "sign in": "Zaloguj się"
   "sign up": "Zarejestruj się"
   "have an account": "Czy masz już konto?"
