--- a/config/locales/pt_PT.yml
+++ b/config/locales/pt_PT.yml
@@ -18,7 +18,7 @@ pt_PT:
   "my picture": "Atualizar minha foto"
   "my notifications": "Gerir Notificações"
   "my connections": "Ligar Contas"
-  "language name": "Português"
+  "language name": "Portuguese (Portugal)"
   "sign in": "Entrar"
   "sign up": "Autenticar-se"
   "have an account": "Já possui uma conta?"
