--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -56,7 +56,7 @@ ko:
   "my notifications": "알림 관리"
   "my connections": "연결된 계정"
   "my devices": "연결된 기기"
-  "language name": "영어"
+  "language name": "한국의"
   "sign in": "로그인"
   "sign up": "계정등록"
   "have an account": "이미 계정이 있습니까?"
